--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
   <link href="https://fonts.googleapis.com/css?family=Libre+Baskerville:700|Nunito" rel="stylesheet">
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Cinzel&display=swap" rel="stylesheet">
+  <link rel="shortcut icon" href="#">
   <title>React App</title>
 </head>
 
