--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Cinzel&display=swap" rel="stylesheet">
   <link rel="shortcut icon" href="#">
-  <title>React App</title>
+  <title>Jeff's Secret | apparel • accessories • lifestyle</title>
 </head>
 
 <body style="margin: 0">
